; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_pcap.c_pcap_close_all.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libpcap/extr_pcap.c_pcap_close_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcap = type { i32 }

@pcaps_to_close = common dso_local global %struct.pcap* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @pcap_close_all to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pcap_close_all() #0 {
  %1 = alloca %struct.pcap*, align 8
  br label %2

2:                                                ; preds = %5, %0
  %3 = load %struct.pcap*, %struct.pcap** @pcaps_to_close, align 8
  store %struct.pcap* %3, %struct.pcap** %1, align 8
  %4 = icmp ne %struct.pcap* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %2
  %6 = load %struct.pcap*, %struct.pcap** %1, align 8
  %7 = call i32 @pcap_close(%struct.pcap* %6)
  br label %2

8:                                                ; preds = %2
  ret void
}

declare dso_local i32 @pcap_close(%struct.pcap*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
